recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value lengh
   	snowSide(levels,lengh-1)
                        ^